# P-OSPF

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  INTERFACE_STATES.md  README.md  compose.yaml  rapport.md  rapport_performance.md
.github/workflows/: release.yml
conf/: config_R_3.toml
config/: default.toml
routing_project/: Cargo.toml  Dockerfile  save.txt
routing_project/src/: main.rs  ospf.rs  routing.rs  types.rs
src/: Dockerfile  Makefile  cli.rs  cli_control.rs  client.c  command  dijkstra.rs  error.rs  hello.rs  init.rs  interface_test.rs  lib.rs  lsa.rs  main.rs  neighbor.rs  neighborshow-agent.c  neighborshow.c  net_utils.rs  ospf_common.h  ospf_router  ospf_router.c  packet_loop.rs  read_config.rs  read_interfaces.rs  server.c  tasks.rs  types.rs
src/client/: mod.rs  protocol_client.rs  request_handler.rs
src/conf/: config_MacBook-Air-de-Lenny.local.toml  config_RDEUX.toml  config_R_1.toml  config_R_3.toml  config_R_4.toml  config_R_5.toml
src/core/: mod.rs  neighbor_discovery.rs  network_interface.rs  path_calculation.rs  routing_table.rs
src/protocol/: hello_protocol.rs  message_types.rs  mod.rs  packet_parser.rs
src/server/: mod.rs  protocol_server.rs  response_handler.rs
src/utils/: config.rs  logger.rs  mod.rs
tests/: integration_tests.rs  unit_tests.rs
