[package]
name = "routing_project"
version = "0.1.0"
edition = "2021"
authors = ["GONZALES Lenny <lenny.gonzales@etu.mines-ales.fr>"]
license = "MIT"
description = "A simple OSPF router implemented in Rust"
homepage = "https://github.com/LennyGonzales/P-OSPF"
repository = "https://github.com/LennyGonzales/P-OSPF"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
net-route = "0.4"
env_logger = "0.10"
log = "0.4"
pnet = "0.33"
hostname = "0.3"
toml = "0.8"

[[bin]]
name = "routing_project"
path = "src/main.rs"

[[bin]]
name = "cli_control"
path = "src/cli_control.rs"