[package]
name = "routing_project"
version = "0.1.0"
edition = "2021"
authors = ["GONZALES Lenny <lenny.gonzales@etu.mines-ales.fr>"]
license = "MIT"
description = "A simple OSPF router implemented in Rust"
homepage = "https://github.com/LennyGonzales/P-OSPF"
repository = "https://github.com/LennyGonzales/P-OSPF"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
net-route = "0.4"
env_logger = "0.10"
log = "0.4"
pnet = "0.33"
hostname = "0.3"
toml = "0.8"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
base64 = "0.22.1"
cipher = "0.4.4"
rtnetlink = "0.13"

[[bin]]
name = "routing"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
