[package]
name = "ospf-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
petgraph = "0.6"
ipnetwork = "0.20"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "routing_project"
path = "src/main.rs"