[package]
name = "ospf-router"
version = "0.1.0"
edition = "2021"
authors = ["GONZALES Lenny <lenny.gonzales@etu.mines-ales.fr>"]
license = "MIT"
description = "A simple OSPF router implemented in Rust"
homepage = "https://github.com/LennyGonzales/P-OSPF"
repository = "https://github.com/LennyGonzales/P-OSPF"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
net-route = "0.4"

[[bin]]
name = "routing_project"
path = "src/main.rs"